# sipx

./: .coverage  .gitignore  .gitmodules  .rumdl.toml  AGENTS.md  CHANGELOG.md  DESIGN.md  FORMAT.md  PLAN.md  README.md  SPEC.md  TODO.md  pyproject.toml  ty.toml
.github/workflows/: asterisk.yml  ci.yml  create-release.yml  release.yml
.mem/: decisions.md  hot.md  open-loops.md
.omo/evidence/: task-2-exception-hierarchy.txt  task-2-import-exceptions.txt  task-3-rfc-matrix-exists.txt  task-3-rfc-matrix-structure.txt  task-4-import-transport.txt  task-4-transport-abstract.txt  task-4-transport-config.txt  task-7-import-tcp.txt  task-7-tcp-implements-transport.txt  task-7-tcp-transport-type.txt
.omo/plans/: sipx-overhaul.md
.spec/: checks.md  handoff.md  rfc-compliance.md  state.md
apps/asterisk/: pyproject.toml
apps/asterisk/examples/: llm_stasis_template.py
apps/asterisk/src/sipx_asterisk/: __init__.py  runtime.py  stasis.py
apps/asterisk/tests/: test_asterisk_backend.py  test_asterisk_integration.py  test_asterisk_runtime.py  test_asterisk_stasis_example.py
apps/cli/: pyproject.toml
apps/cli/src/sipx_cli/: __init__.py  main.py
apps/cli/tests/: test_cli.py
apps/fastapi/: README.md  pyproject.toml
apps/fastapi/src/sipx_fastapi/: __init__.py  app.py  config.py  main.py  serializers.py
apps/fastapi/tests/: test_app.py
apps/harness/: pyproject.toml
apps/harness/src/sipx_harness/: __init__.py  actor.py  artifacts.py  capabilities.py  expect.py  harness.py  metrics.py  mixed.py  mock.py  profile.py  recorder.py  redaction.py  reports.py  runtime.py  scenario.py  timeline.py  verdict.py
apps/harness/tests/: test_artifacts.py  test_capabilities_expect.py  test_harness_scenario.py  test_package_boundary.py  test_recorder_reports_profiles.py  test_redaction.py  test_timeline.py
apps/llm/: pyproject.toml
apps/llm/examples/: semantic_smoke.py  sip_flow_audit.py
apps/llm/src/sipx_llm/: __init__.py
apps/llm/tests/: test_llm.py
apps/scenarios/: pyproject.toml
apps/scenarios/examples/mizu/: harness.toml  invite_with_sdp.py  invite_without_sdp.py  manipulation.py  metrics.py  mizu_common.py  options.py  register.py  smoke_tests.py
apps/scenarios/examples/sip/: README.md  call_with_dtmf.py  mizu_call.py  sip_cli_flow.py
apps/scenarios/src/sipx_scenarios/: __init__.py
apps/scenarios/tests/: test_examples_templates.py
apps/softphone/: pyproject.toml
apps/stt/: pyproject.toml
apps/tts/: pyproject.toml
docker/asterisk/: .gitignore  Dockerfile  README.md  docker-compose.yml
docs/: ARCHITECTURE.md  ASTERISK.md  COMPLETION_REPORT.md  FINAL_SUMMARY.md  GUIA_WSL_ASTERISK.md  INDEX.md  INDEX.txt  MIGRATION_AUTH.md  MODULES.md  QUICK_START.md  README.md  SDD.md  SPEC-tui-redesign.md  SUMMARY.md  migration.md
docs/old-api-snapshot/: IMPORTS.md  ua.py  uac.py  uas.py
examples/: README.md  asterisk.py  asterisk_complete_demo.py  asterisk_demo.py  asterisk_full.py  async_client.py  async_server.py  audio.py  audio_gen.py  b2bua.py  call.py  call_flow.py  call_transfer.py  dialog_tracking.py  dns_resolver.py  dtmf.py  dtmf_demo.py  events.py  events_demo.py  example_1.py  example_2.py  example_3.py  fastapi_sip.py  forking.py  ivr.py  ivr_menu.py  parser.py  parser_demo.py  prack.py  presence.py  quickstart.py  response_builders.py  routing.py  sdp.py  sdp_demo.py  server.py  server_demo.py  session_timers.py  sip_ladder.py  sipi.py  (+3 more)
examples/asterisk/: llm_stasis_template.py
examples/llm/: semantic_smoke.py  sip_flow_audit.py
examples/native/: README.md  call_with_dtmf.py  mizu_call.py  sip_cli_flow.py
examples/srx/: __init__.py  auth.py  dialog.py  fsm.py  main.py  message.py  rtp.py  sdp.py  stack.py  transport.py  uri.py
sipx/: __init__.py  __main__.py  _auth.py  _client.py  _depends.py  _dns.py  _events.py  _fsm.py  _routing.py  _rtp.py  _sdp.py  _server.py  _session_timer.py  _sip.py  _subscription.py  _transport.py  _types.py  _uri.py  _utils.py  client.py  config.py  demo.py  exceptions.py  legacy.py  main.py  models.py  summary.py  types.py  ua.py  uac.py  uas.py  utils.py  wire.py
sipx/_contrib/: _fastapi.py  _ivr.py  _sipi.py  _stt_whisper.py  _tts_google.py
sipx/_handlers/: __init__.py  _auth.py  _base.py  _composite.py  _invite.py  _register.py  _response.py  _state.py  _utility.py
sipx/_media/: __init__.py  _async.py  _audio.py  _codecs.py  _dtmf.py  _rtp.py  _session.py
sipx/_models/: __init__.py  _auth.py  _body.py  _header.py  _message.py
sipx/_transports/: _base.py  _tcp.py  _tls.py  _udp.py  _ws.py
sipx/backends/: __init__.py  asterisk.py  mock.py  native.py
sipx/cli/: main.py
sipx/client/: __init__.py  _async.py  _base.py  _sync.py
sipx/contrib/: __init__.py  _b2bua.py  _fastapi.py  _isup.py  _ivr.py  _sipi.py  _sipi_br.py  _stt_whisper.py  _tts_google.py
sipx/core/: __init__.py  actor.py  artifacts.py  capabilities.py  event.py  expect.py  harness.py  mixed.py  profile.py  recorder.py  reports.py  scenario.py  timeline.py  verdict.py
sipx/dns/: __init__.py  _async.py  _models.py  _sync.py
sipx/examples/: __init__.py  asterisk_stasis.py  build_request.py  call.py  cancel.py  common.py  handlers.py  hooks_history.py  info_dtmf.py  invite.py  invite_with_sdp.py  message.py  (+9 more)
tests/: conftest.py  test_asterisk_backend.py  test_asterisk_integration.py  test_asterisk_stasis_example.py  test_b2bua.py  test_capabilities_expect.py  test_cli.py  test_client.py  test_client_config.py  test_client_lifecycle.py  test_client_uac.py  test_client_uas.py  test_config.py  test_contrib.py  test_depends.py  test_dns.py  test_events.py  test_examples.py  test_examples_templates.py  test_exceptions.py  test_forking.py  test_fsm.py  test_harness_scenario.py  test_llm.py  test_media.py  test_models.py  test_native_sip_backend.py  test_native_softphone.py  test_prack.py  test_presence.py  test_protocol_auth.py  test_protocol_dialog.py  test_protocol_fuzz.py  test_protocol_hooks.py  test_protocol_provisional.py  test_protocol_transaction.py  test_recorder_reports_profiles.py  test_redaction.py  test_refer.py  test_rfc_dns.py  (+27 more)
(+139 files in other folders)
