[project]
name = "sipx"
version = "1.11.0"
description = "Python programmable Voice/SIP harness for call automation, IVR testing, technical softphones, and media validation"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.16",
    "sipx-asterisk",
    "sipx-cli",
    "sipx-harness",
    "sipx-llm",
    "sipx-scenarios",
    "sipx-stt",
    "sipx-tts",
    "taskipy>=1.14.1",
    "ty>=0.0.44",
]

[tool.uv.sources]
sipx-asterisk = { workspace = true }
sipx-cli = { workspace = true }
sipx-harness = { workspace = true }
sipx-llm = { workspace = true }
sipx-scenarios = { workspace = true }
sipx-stt = { workspace = true }
sipx-tts = { workspace = true }

[tool.uv.workspace]
members = [
    "apps/asterisk",
    "apps/cli",
    "apps/harness",
    "apps/llm",
    "apps/scenarios",
    "apps/stt",
    "apps/tts",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    "apps/asterisk/src",
    "apps/cli/src",
    "apps/harness/src",
    "apps/llm/src",
    "apps/scenarios/src",
    "apps/stt/src",
    "apps/tts/src",
]
