[project]
name = "sipx-asterisk"
version = "0.1.0"
description = "Asterisk ARI runtime and examples for sipx"
requires-python = ">=3.14"
dependencies = ["sipx", "sipx-harness"]

[tool.uv.sources]
sipx = { workspace = true }
sipx-harness = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
